// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component prop snapshots all props are not set 1`] = `
<scale-logo>
  <mock:shadow-root>
    <style>
      :host {
       --logo-size: 36px;
     }
    </style>
    <div class="logo logo--variant-magenta">
      <scale-logo-svg color="magenta" language="en" role="img" size="36"></scale-logo-svg>
    </div>
  </mock:shadow-root>
</scale-logo>
`;

exports[`component prop snapshots all props are set 1`] = `
<scale-logo>
  <mock:shadow-root>
    <style>
      :host {
       --logo-size: 100px;
     }
    </style>
    <a class="logo logo--transparent logo--variant-white" href="https://www.telekom.de/start">
      <scale-logo-svg color="white" language="hr" role="link" size="100"></scale-logo-svg>
    </a>
  </mock:shadow-root>
</scale-logo>
`;

exports[`component prop snapshots all props should handle no link 1`] = `
<scale-logo>
  <mock:shadow-root>
    <style>
      :host {
       --logo-size: 36px;
     }
    </style>
    <div class="logo logo--variant-magenta">
      <scale-logo-svg color="magenta" language="en" role="img" size="36"></scale-logo-svg>
    </div>
  </mock:shadow-root>
</scale-logo>
`;
